# Graphene_codes

./: .gitignore  README.md
Code/: CMakeLists.txt  CmakeLists.txt
Code/examples/Bilayer_Magnetism_E0_numerical/: CMakeLists.txt  main.cpp  plot_magnetism.py
Code/examples/Bilayer_Magnetism_densities/: CMakeLists.txt  main.cpp  plot_magnetism.py
Code/examples/Bilayer_Magnetism_densitiesCalculation/: CMakeLists.txt  main.cpp
Code/examples/Bilayer_Magnetism_voltages/: CMakeLists.txt  main.cpp  plot_magnetism.py
Code/examples/Bilayer_noMagnetism/: CMakeLists.txt  main.cpp
Code/examples/Bilayer_transport_v0/: .gitignore  CMakeLists.txt  func.cpp  main.f90  plot_T.py  plot_bands.py  utils.py  wholeSim.py
Code/lib/: CMakeLists.txt  CmakeLists.txt
Code/lib/src/: Bilayer.cpp  Bilayer.h  BilayerMagnetic.cpp  Bilayer_c_interface.cpp  Bilayer_f90_interface.f90  Constants.cpp  Constants.h  Utilities.cpp  Utilities.h  funkcje.cpp  funkcje.h
Code/scripts/: README.md  build.bat  build.sh  recmake.bat  recmake.sh  run.bat  run.sh
Multilayers_Graphene/: CmakeLists.txt  plot.py
Multilayers_Graphene/src/: Constants.cpp  Constants.h  Utilities.cpp  Utilities.h  funkcje.cpp  funkcje.h  main.cpp
